@@ -169,13 +169,6 @@
         <regenerate/>
         <download/>
       </component>
-      <component name="bse" dir="beast" group="extras">
-        <podir dir="po-bse"/>
-        <potname name="bse.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-	<download/>
-      </component>
     </version>
   </module>
   <module name="bonobo-config">
