@@ -1,3 +1,7 @@
+2003-12-15  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Removed bse.
+
 2003-12-07  Danilo Šegan  <dsegan@gmx.net>
 
 	* translation-status.xml: Added gnome-jabber.
